# python-package-template

./: .travis.yml  LICENSE  OWNERS  Pipfile  README.md  format_code.sh  pyproject.toml  setup.cfg  setup.sh  test.sh
my_package/: setup.py
my_package/my_package/: main.py  main_test.py
