[tool.poetry]
name = "python-package-template"
version = "0.1.0"
description = ""
authors = ["Gabriele Angeletti <angeletti.gabriele@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
ipython = "^8.10.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
pytest-xdist = "^2.5.0"
typing-extensions = "^4.3.0"
vulture = "^2.5"

[tool.black]
exclude = ".git|.hg|.mypy_cache|.nox|.tox|.venv|_build|buck-out|build|dist"
line-length = 110
target-version = ["py310"]
skip-numeric-underscore-normalization = true

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3
sections = "FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER"
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
